--- a/src/components/Echarts/tpl.html
+++ b/src/components/Echarts/tpl.html
@@ -4,7 +4,7 @@
     <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon"> 
     <title>echarts</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0,user-scalable=no,minimal-ui">
     <style type="text/css">
       html,body {
         height: 100%;
